--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   tasks:
     - name: Set Kubernetes context
-      command: aws eks update-kubeconfig --name your-eks-cluster-name --region us-west-2
+      command: aws eks update-kubeconfig --name guberapandian --region ap-southeast-1
 
     - name: Deploy Helm chart
       community.kubernetes.helm:
@@ -11,5 +11,5 @@
         release_namespace: "my-namespace"
         values:
           image:
-            repository: "your-account-id.dkr.ecr.us-west-2.amazonaws.com/my-microservice"
+            repository: "762233769537.dkr.ecr.ap-southeast-1.amazonaws.com/gubera-deployment"
             tag: "{{ lookup('env', 'BUILD_NUMBER') }}"
